--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,9 +3,9 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
-name = "openai-gradio"
+name = "llama-cpp-python-gradio"
 version = "0.0.4"
-description = "A Python package for creating Gradio applications with OpenAI models"
+description = "A Python package for creating Gradio applications with llama.cpp models"
 authors = [
     { name = "AK", email = "ahsen.khaliq@gmail.com" }
 ]
@@ -17,17 +17,17 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 dependencies = [
-    "gradio>=5.0.0b5",
-    "openai",
+    "gradio>=5.5.0",
+    "llama-cpp-python",
 ]
 
 [project.urls]
-homepage = "https://github.com/AK391/openai-gradio"
-repository = "https://github.com/AK391/openai-gradio"
+homepage = "https://github.com/AK391/llama-cpp-python-gradio"
+repository = "https://github.com/AK391/llama-cpp-python-gradio"
 
 [project.optional-dependencies]
 dev = ["pytest"]
 
 [tool.hatch.build.targets.wheel]
-packages = ["openai_gradio"]
+packages = ["llama_cpp_python_gradio"]
 
